--- a/Source/MultithreadedVectorFields/MultithreadedVectorFields.csproj
+++ b/Source/MultithreadedVectorFields/MultithreadedVectorFields.csproj
@@ -19,7 +19,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <DefineConstants>$(DefineConstants);TRACE</DefineConstants>
+    <DefineConstants>$(DefineConstants);TRACE;DEBUG_TOOLS</DefineConstants>
   </PropertyGroup>
 
   <ItemGroup>
